--- a/grading.html
+++ b/grading.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <!-----STUDENT GRADE GENERATOR---->
-<script>href=index.js</script>
+    <div class=grade>
+    Welcome to the grade generator!
+    Please enter the grade!
+    <script>href=index.js</script>
+</div>
 </body>
 </html>
