--- a/grading.html
+++ b/grading.html
@@ -7,11 +7,37 @@
     <title>Code-challenge-1</title>
 </head>
 <body>
-    <!-----STUDENT GRADE GENERATOR---->
-    <div class=grade>
-    Welcome to the grade generator!
-    Please enter the grade!
-    <script>href=index.js</script>
-</div>
+    <h1><!--These are the links to the different parts of the code challenge-->
+        <a href="netSalaryCalculator.html">Salary-Calculator</a>
+        <a href="speedDetector.html">Speed-Detector</a>
+        <a href="grading.html">Grading-System</a>
+    </h1>
+    <input id="studentMark"/>
+    <button onclick="getGrade()">Get the grade!</button>
+    <h2 id="grade"></h2>
+    <script>
+     const studentMark=document.getElementById(
+        'studentMark'
+     );
+     const grade=document.getElementById(
+        "grade"
+     )
+     function getGrade(studentMark){
+    if(studentMark>79){
+        grade="A";
+    }else if(60<studentMark&&studentMark<80){
+        grade="B";
+    }else if(48<studentMark&&studentMark<60){
+        grade="C";
+    }else if(39<studentMark&&studentMark<50){
+        grade="D";
+    }else if(studentMark<40){
+        grade="E";
+    }
+    console.log(grade);
+    grade.innerText=`The grade is, ${grade} .`;
+}
+    </script>
+
 </body>
 </html>
