Grading is a success!

--- a/grading.html
+++ b/grading.html
@@ -13,31 +13,38 @@
         <a href="grading.html">Grading-System</a>
     </h1>
     <input id="studentMark"/>
-    <button onclick="getGrade()">Get the grade!</button>
-    <h2 id="grade"></h2>
+    <button onclick="getGrade()">Get Grade!</button>
+    <h3 id="showGrade"></h3>
+    <!--Beginning of JavaScript code-->
     <script>
      const studentMark=document.getElementById(
-        'studentMark'
-     );
-     const grade=document.getElementById(
-        "grade"
-     )
-     function getGrade(studentMark){
-    if(studentMark>79){
-        grade="A";
-    }else if(60<studentMark&&studentMark<80){
-        grade="B";
-    }else if(48<studentMark&&studentMark<60){
-        grade="C";
-    }else if(39<studentMark&&studentMark<50){
-        grade="D";
-    }else if(studentMark<40){
-        grade="E";
-    }
-    console.log(grade);
-    grade.innerText=`The grade is, ${grade} .`;
-}
+            'studentMark'
+        );
+        const showGrade=document.getElementById(
+            'showGrade'
+        )
+       function getGrade(){
+        const mark=parseInt(studentMark.value);
+        let grade;
+        if(mark>=80){
+            grade='A';
+        }
+        else if(mark>=60){
+            grade='B';
+        }
+        else if (mark>=50){
+            grade='C';
+        }
+        else if(mark>=40) {
+             grade='D';
+        }
+        else{grade='E'
+        }
+        console.log(grade)
+        showGrade.innerText=`Your grade is, ${grade}`;
+       }
     </script>
+    <!--End of javaScript code-->
 
 </body>
 </html>
