--- a/netSalaryCalculator.html
+++ b/netSalaryCalculator.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code-challenge-1</title>
 </head>
 <body>
     <h1><!--These are the links to the different parts of the code challenge-->
