Second one working

--- a/speedDetector.html
+++ b/speedDetector.html
@@ -12,30 +12,33 @@
         <a href="speedDetector.html">Speed-Detector</a>
         <a href="grading.html">Grading-System</a>
     </h1>
-    <input id="speed"/>
-    <button onclick="detectSpeed()">Detect Speed!</button>
-    <h3 id="showMessage"></h3>
+    <form>
+		<label for="speed">Enter car speed (in km/h): </label>
+		<input type="number" id="speed" name="speed" required>
+		<button type="submit">Get demerit points!</button>
+	</form>
+	<p id="result"></p>
     <!--Beginning of JavaScript code-->
     <script>
-    //Code to detect speed
-    //Variables definition
-    let speed=document.getElementById('speed')
-    const speedLimit=70;
-    const distancePerDemeritPoint=5;
-    var message=document.getElementById('showMessage');
-    //Function to test input speed and output either a message or one's demerit points
-    function detectSpeed(){
-        const speedValue=parseInt(speed.value);
-    if(speedValue<=speedLimit){
-         message="Ok."
-    }
-    else {
-        var demeritPoints=Math.floor((speed-speedLimit)/kmPerDemeritPoint);
-         message=`These are your demerit points:${demeritPoints}`;
-    }
-    console.log(message);
-    showMessage.innerText=`${message}`;
-}
+    document.querySelector('form').addEventListener('submit', function(e) {
+			e.preventDefault(); // prevent form submission
+
+			// Get input value
+			let speed = parseInt(document.getElementById('speed').value);
+
+			// Calculating demerit points
+			let demeritPoints = 0;
+			if (speed <= 70) {
+				document.getElementById('result').textContent = "Ok";
+			} else {
+				demeritPoints = Math.floor((speed - 70) / 5);
+				if (demeritPoints > 12) {
+					document.getElementById('result').textContent = "License suspended";
+				} else {
+					document.getElementById('result').textContent = "Your points are, " + demeritPoints;
+				}
+			}
+		});
 
     </script>
     <!--Beginning of JavaScript code-->
